--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.19.0",
+    "gray-matter": "^4.0.2",
     "next": "10.0.9",
+    "next-mdx-remote": "^2.1.3",
+    "next-remote-watch": "git://github.com/hashicorp/next-remote-watch.git",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/jit": "^0.1.10",
+    "@types/node": "^14.14.36",
+    "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.4",
+    "typescript": "^4.2.3"
   }
 }
