--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "next": "10.0.9",
     "next-mdx-remote": "^2.1.3",
     "next-remote-watch": "git://github.com/hashicorp/next-remote-watch.git",
+    "prism-react-renderer": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.10",
+    "@tailwindcss/typography": "^0.4.0",
     "@types/node": "^14.14.36",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
