--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.9",
     "next-mdx-remote": "^2.1.3",
     "next-remote-watch": "git://github.com/hashicorp/next-remote-watch.git",
+    "next-themes": "^0.0.14",
     "prism-react-renderer": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
