--- a/package.json
+++ b/package.json
@@ -3,23 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next-remote-watch ./posts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^11.0.0",
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
     "next": "11.0.0",
+    "next-mdx-remote": "^3.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rehype-katex": "^4.0.0",
+    "rehype-stringify": "^8.0.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "remark-html-katex": "^3.0.0",
+    "remark-math": "^3.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-react": "^8.0.0",
+    "remark-rehype": "^8.1.0",
+    "unified": "^9.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "@types/react": "17.0.11",
     "autoprefixer": "^10.2.6",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
+    "next-remote-watch": "^1.0.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.0",
     "typescript": "4.3.4"
