--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "contentlayer": "^0.2.5",
+    "date-fns": "^2.28.0",
+    "inter-ui": "^3.19.3",
     "next": "12.2.0",
+    "next-contentlayer": "^0.2.5",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
