--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
+    "@tabler/icons": "^1.72.0",
     "autoprefixer": "^10.4.7",
     "contentlayer": "^0.2.5",
     "date-fns": "^2.28.0",
@@ -18,6 +20,14 @@
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "reading-time": "^1.5.0",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.1.0",
+    "rehype-prism-plus": "^1.4.2",
+    "rehype-slug": "^5.0.1",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
