--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons": "^1.72.0",
     "autoprefixer": "^10.4.7",
     "contentlayer": "^0.2.5",
+    "custom-dashed-border": "^0.1.1",
     "date-fns": "^2.28.0",
     "inter-ui": "^3.19.3",
     "next": "12.2.0",
@@ -28,6 +29,7 @@
     "rehype-prism-plus": "^1.4.2",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
