--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@jsdevtools/rehype-toc": "^3.0.2",
+    "@radix-ui/react-tabs": "^0.1.5",
     "@tabler/icons": "^1.72.0",
     "autoprefixer": "^10.4.7",
     "contentlayer": "^0.2.5",
     "custom-dashed-border": "^0.1.1",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.4.3",
     "inter-ui": "^3.19.3",
     "next": "12.2.0",
     "next-contentlayer": "^0.2.5",
@@ -22,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-responsive": "^9.0.0-beta.10",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
@@ -30,7 +33,8 @@
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "swr": "^1.3.0",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "tailwindcss-radix": "^2.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
